# seer-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/seer/: predicted_steps.h  seer.h
src/lib/: CMakeLists.txt  Tornado.cmake  predicted_steps.c  seer.c
src/test/: CMakeLists.txt  main.c  test.c
